--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -6,16 +6,45 @@ body {
   border: 0.2vw solid black;
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-direction: column;
   background-color: rgb(255, 33, 33);
-  /* background-color: rgb(153, 0, 0); */
+}
+.Login {
+  position: absolute;
+  right: 10px;
+  width: 250px;
+  padding: 5px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  background-color: rgb(168, 168, 168);
+  border: 3px solid rgb(98, 98, 98);
+  font-family: "consolas";
+}
+.Login div {
+  margin: 0px !important;
+}
+.Login div input {
+  padding: 0 10px 0 0;
+}
+.Login ::placeholder {
+  font-family: "consolas";
+}
+#Input_De_Login_User {
+  padding: 0 20px 0 0;
+}
+.Login hr {
+  width: 250px;
+}
+.Botao_De_Logar_User_Senha {
+  width: 250px;
+  font-family: "consolas";
+  padding: 4px 0px 4px 0;
 }
 .Banner_Topo div {
   font-size: 1vw;
   display: flex;
   align-items: center;
-  justify-content: center;
   margin: 1vw 0 0 0;
 }
 
