--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -21,6 +21,17 @@ body {
   border: 3px solid rgb(98, 98, 98);
   font-family: "consolas";
 }
+.Login_Botao {
+  position: absolute;
+  right: 10px;
+  padding: 0 192.8px 0 0;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  background-color: rgb(168, 168, 168);
+  border: 3px solid rgb(98, 98, 98);
+  font-family: "consolas";
+}
 .Login div {
   margin: 0px !important;
 }
