--- a/src/pages/Home/Estilo_Categorias_E_Produtos_Home.css
+++ b/src/pages/Home/Estilo_Categorias_E_Produtos_Home.css
@@ -21,7 +21,7 @@
   flex-direction: column;
   align-items: center;
 }
-.Produtos div img {
+.Produtos div .Imagem_Do_Produto_Home {
   width: 10vw;
   height: 20vh;
 }
