--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,20 +1,27 @@
-/* Geral da Pagina */
-body {
-  /* color: white;
-  background-color: black; */
-}
 /* Itens do Banner em Geral */
 .Parte_Superior_Do_Site {
   display: block;
   align-items: center;
 }
 
+/* Estilo de barra de scroll */
+::-webkit-scrollbar {
+  height: 25px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgb(85, 85, 85);
+  border-radius: 50px;
+}
+::-webkit-scrollbar-track {
+  background-color: darkgray;
+  border-radius: 50px;
+}
+
 .Banner_Topo {
-  border: 0.2vw solid black;
+  border: 0.2vw solid;
   display: flex;
   align-items: center;
   flex-direction: column;
-  background-color: rgb(255, 33, 33);
 }
 .Login {
   position: absolute;
@@ -114,4 +121,13 @@ body {
   flex-direction: column;
   align-items: center;
   color: black;
+}
+
+.Secao_Categorias_Com_Produtos {
+  margin: 0 0 50px 0;
+}
+.Direitos_Autorais_RVS {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
