--- a/src/pages/Home/Estilo_Mercados_Links.css
+++ b/src/pages/Home/Estilo_Mercados_Links.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  overflow: hidden;
+  overflow: auto;
 }
 .Mercados_Juntos:hover {
   overflow-x: scroll;
