--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -7,6 +7,7 @@
 /* Estilo de barra de scroll */
 ::-webkit-scrollbar {
   height: 25px;
+  padding: 50px;
 }
 ::-webkit-scrollbar-thumb {
   background-color: rgb(85, 85, 85);
@@ -14,6 +15,7 @@
 }
 ::-webkit-scrollbar-track {
   background-color: darkgray;
+  padding: 50px;
   border-radius: 50px;
 }
 
