--- a/src/pages/Home/Estilo_Categorias_E_Produtos_Home.css
+++ b/src/pages/Home/Estilo_Categorias_E_Produtos_Home.css
@@ -21,29 +21,52 @@
 .Produtos:hover {
   overflow-x: scroll;
 }
+.Logo_Mercado_Produtos_Home {
+  z-index: 999999;
+}
 
 .Produto_Individual_Estilo_Generalizado {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   border: 1px solid black;
   margin: 5px 10px 10px 5px;
   padding: 15px;
   border-radius: 15%;
+  width: 204px;
+  /* min-height: 296px; */
 }
 
-.Produtos div .Imagem_Do_Produto_Home {
-  width: auto;
-  height: 20vh;
+.Div_Logo_Imagem_Nome_Preco_Avaliacao_Do_Produto {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-.Produtos div h3 {
+
+.Div_Logo_Imagem_Nome_Preco_Avaliacao_Do_Produto
+  > .Div_De_Imagem_Do_Produto_Home {
+  width: 172px;
+  height: 172px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.Imagem_Do_Produto_Home {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.Div_Logo_Imagem_Nome_Preco_Avaliacao_Do_Produto > .Nome_Do_Produto {
+  /* min-height: 54px; */
+}
+
+.Div_Logo_Imagem_Nome_Preco_Avaliacao_Do_Produto > p {
   margin: 0px;
-  text-align: center;
-  width: 250px;
 }
-.Produtos div p {
-  margin: 0px;
-}
+
 .Botao_De_Adicao_De_Produto_No_Carrinho {
   background-color: red;
   border-radius: 10px 10px;
