Atualizacoes de site

--- a/src/pages/Home/Estilo_Banner_De_Slides.css
+++ b/src/pages/Home/Estilo_Banner_De_Slides.css
@@ -1,47 +1,30 @@
 /* Seção de Estilização do Banner de Apresentações */
+.Conjunto_De_Imagens_Para_Navegacao_E_Controle {
+  transition: left 1.5s ease;
+}
+
 .Imagens_De_Apresentacoes {
-  height: 32.24vw;
-  width: 96.46vw;
-  border-radius: 3vw;
+  width: 100%;
   overflow: hidden;
   position: absolute;
-  left: 50%;
-  transform: translate(-50%, 5px);
 }
+.Corretor_De_Slides {
+  height: calc(35.24vw + 99px + 30px);
+}
+
 .Slide img {
   width: 100%;
   height: 100%;
 }
-.Botao_Slide_Anterior {
-  position: absolute;
-  left: -40vw;
-  top: -30vw;
-  width: 4vw;
-  height: 30vw;
-  background-color: rgba(255, 255, 255, 0);
-  border: 0px;
-  font-size: 5vw;
+.Conjunto_Slide_Itens_Div {
+  background-color: #0e0c0d;
 }
-.Botao_Proximo_Slide {
-  position: absolute;
-  right: -40vw;
-  border-radius: 0 2vw 2vw 0;
-  top: -30vw;
-  width: 4vw;
-  height: 30vw;
-  background-color: rgba(255, 255, 255, 0);
-  border: 0px;
-  font-size: 5vw;
-}
+
 .Input_Tipo_Radio_Alteracao_Slide {
   display: none;
 }
 .Navegacao_Entre_Slides {
-  position: absolute;
-  bottom: -23px;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
+  display: none;
 }
 .Barra_De_Navegacao_De_Imagem {
   width: 0.5vw;
@@ -52,6 +35,70 @@
   margin: 10px;
   transition: 0.4s;
 }
-.Barra_De_Navegacao_De_Imagem:hover {
-  background-color: rgb(255, 255, 255);
+
+.Conteudo_Do_Slide_Clicavel {
+  position: relative;
+}
+.Conteudo_Do_Slide_Clicavel > * {
+  position: absolute;
+}
+.Informacoes_Extras_No_Banner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.Informacoes_Extras_No_Banner:hover {
+  color: white;
+  background: linear-gradient(to right, white 50%, red 50%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  transition: background 0.7s ease;
+  background-size: 200% 100%;
+  background-position: -100% 0%;
+}
+
+.Extra_Sub_Titulo_Centralizado {
+  opacity: 0;
+  color: white;
+  font-weight: bold;
+  transition: opacity 0.5s ease;
+}
+
+.Informacoes_Extras_No_Banner:hover .Extra_Sub_Titulo_Centralizado {
+  transition: opacity 2s ease;
+
+  opacity: 1;
+}
+
+.Conteudo_Do_Slide_Clicavel {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.Extra_Titulo_Centralizado {
+  font-size: 5vw;
+}
+.Extra_Sub_Titulo_Centralizado {
+  font-size: 1vw;
+}
+
+.Conteudo_Do_Slide_Clicavel {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.Extra_Titulo_Centralizado {
+  font-size: 5vw;
+}
+.Extra_Sub_Titulo_Centralizado {
+  font-size: 1vw;
 }
