--- a/src/pages/Home/Estilo_Mercados_Links.css
+++ b/src/pages/Home/Estilo_Mercados_Links.css
@@ -11,4 +11,9 @@
   display: flex;
   flex-direction: column;
   width: 212px;
+  border: 2px solid black;
+  border-radius: 50%;
+}
+.Div_Mercado_Individual > img {
+  border-radius: 50%;
 }
