--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -29,7 +29,7 @@ body {
   width: 15vw;
   max-height: 20vh;
   overflow-x: none;
-  overflow-y: scroll;
+  overflow-y: auto;
   border: 1px solid black;
   border-top: none;
   position: absolute;
