Desativacao de scroll com hover em produtos

--- a/src/pages/Home/Estilo_Categorias_E_Produtos_Home.css
+++ b/src/pages/Home/Estilo_Categorias_E_Produtos_Home.css
@@ -19,7 +19,7 @@
   overflow: auto;
 }
 .Produtos:hover {
-  overflow-x: scroll;
+  /* overflow-x: scroll; */
 }
 .Logo_Mercado_Produtos_Home {
   z-index: 999999;
